tests/spec/non_conformant/errors/import/miss/mixin/simple/mod.rs
//! Tests auto-converted from "sass-spec/spec/non_conformant/errors/import/miss/mixin/simple"

mod inside;

mod outside;
